...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="start"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Waitlisted" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selected" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelled" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registered" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entrants_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/entrant_item" />

    <LinearLayout
...
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:padding="8dp">

        <Button
            android:id="@+id/sample_entrants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Sample Entrants"
            android:layout_margin="3dp"
            android:textSize="12sp"
            app:icon="@drawable/baseline_scatter_plot_24" />

        <Button
            android:id="@+id/send_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Send Notification"
            android:textSize="12sp"
            android:layout_margin="3dp"
            app:icon="@drawable/white_notification" />

        <Button
            android:id="@+id/remove_entrant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Remove An Entrant"
            android:textSize="12sp"
            android:layout_margin="3dp"
            app:icon="@drawable/baseline_person_remove_24" />

        <Button
            android:id="@+id/view_entrant_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Map of Entrants"
            android:textSize="12sp"
            android:layout_margin="3dp"
...
