...
                                android:layout_height="wrap_content"
                                android:text="Name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/facilityNameTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="Email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/facilityEmailTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="Address"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/facilityAddressTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
        android:text="@string/edit_facility"
        app:icon="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/view_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3D5AFE"
        android:text="@string/view_events"
...
